# data-engineer-technical-test

./: .gitignore  .mise.local.toml  Dockerfile  NOTES.md  README.md  dbt.sh  docker-compose.yaml  pyproject.toml
gemini_conversations/: PROJECT_SUMMARY_1.md
src/: __init__.py
src/analytics/macros/: test_chronological_order.sql  test_is_positive.sql
src/analytics/models/core/: dim_bet_outcomes.sql  dim_games.sql  dim_users.sql  fct_bets.sql  schema.yml
src/analytics/models/staging/: schema.yml  stg_raw__bet.sql  stg_raw__bet_outcome.sql  stg_raw__fx_rates.sql  stg_raw__game.sql  stg_raw__user_address.sql  stg_raw__users.sql
src/analytics/tests/: audit_fct_bets_currency_conversion.sql
src/python/: main.py
src/python/el_types/: eler.py  file_sources.py  ingestors.py  observers.py  sql_destinations.py
